infrastructure/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: { namespaces: { from: All } }
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.jenkinsdevops.org"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-cert
      allowedRoutes: { namespaces: { from: All } }
